--- a/app.json
+++ b/app.json
@@ -11,8 +11,14 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
+    "assetBundlePatterns": ["**/*"],
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "La app accedera a tus fotos."
+        }
+      ]
     ],
     "ios": {
       "supportsTablet": true
